--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,19 @@ jobs:
       # Fetches proj dependencies from pub
       - name: Install dependencies
         run: flutter pub get
-          # ^ If you want to use a specific version of flutter
+        # ^ If you want to use a specific version of flutter
+      
+      # Verifies if the dart code is formatted well
+      - name: Verify formatting
+        run: dart format --output=none --set-exit-if-changed .
+        # --set-exit-if-changed stops execution if the any code is not well formatted
+        # --output=none prints files which needs to be formatted
+      
+      # Checks for Symantic errors. Can be configured using analysis_options.yaml
+      - name: Analyze project source
+        run: flutter analyze
+        # optionally use --fatal-warnings to stop execution if any warnings are found
+
+      # Runs unit test
+      - name: Run tests
+        run: flutter test
