--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,12 @@ jobs:
       # Clones the project on the machine
       - uses: actions/checkout@v4
 
+      # Sets up java 11
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       # Installs flutter and related dependency on this machine
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -42,8 +48,21 @@ jobs:
       
       # Checks for Symantic errors. Can be configured using analysis_options.yaml
       - name: Analyze project source
-        run: flutter analyze
+        run: flutter analyze --fatal-warnings
         # optionally use --fatal-warnings to stop execution if any warnings are found
 
       # Runs unit test
     
+
+      # Create android apk
+      - name: Build apk
+        run: flutter build apk
+      
+        # Upload apk to Firebase distribution
+      - name: Upload apk to Firebase distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
+        with:
+          appId: ${{ secrets.FIREBASE_APP_ID_ANDROID }}
+          serviceCredentialsFileContent: ${{ secrets.SERVICE_CREDENTIALS_FILE_CONTENT }}
+          groups: all_testers
+          file: build/app/outputs/flutter-apk/app-release.apk
